@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: default.conf,v 1.1 2012/08/06 17:06:17 jmmv Exp $
 
 # Configuration of automatic system upgrades by sysupgrade(8).
 #
@@ -8,6 +8,7 @@
 
 # Path to the release files (local path or remote URL).
 #RELEASEDIR="ftp://ftp.NetBSD.org/pub/NetBSD/NetBSD-6.0/$(uname -m)"
+#RELEASEDIR="ssh://me@builder.example.net/home/sysbuild/release/$(uname -m)"
 RELEASEDIR="/home/sysbuild/release/$(uname -m)"
 
 # Name of the kernel to be installed.
