@@ -25,7 +25,7 @@
 .\" THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 .\" OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.Dd August 24, 2012
+.Dd October 10, 2012
 .Dt SYSUPGRADE 8
 .Os
 .Sh NAME
@@ -251,7 +251,7 @@ points to a local directory, the utility just creates symlinks within the cache
 directory pointing to the original files.
 Otherwise, if
 .Va RELEASEDIR
-points to a remote FTP or HTTP site, the fetch command will retrieve the
+points to a remote FTP, HTTP or SSH site, the fetch command will retrieve the
 contents of the release directory into the local cache directory.
 .Pp
 Please note that all the commands that access distribution sets do so by looking
