@@ -25,7 +25,7 @@
 .\" THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 .\" OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.Dd August 24, 2012
+.Dd October 10, 2012
 .Dt SYSUPGRADE.CONF 5
 .Os
 .Sh NAME
@@ -129,6 +129,12 @@ Location of the release directory (which must hold a
 .Pa binary/sets/
 subdirectory).
 This can be either a local path or a URL.
+.Pp
+If the location is a URL, any of the HTTP, FTP or SSH protocols are supported.
+In the case of SSH, the URL takes the form:
+.Sq ssh://[user[:password]@]<host>/<absolute_path> ,
+which is different to the syntax accepted by
+.Xr scp 1 .
 .Pp
 Default: not set.
 .It Va SETS
